Fixed site alignment on mobiles

--- a/agency.css
+++ b/agency.css
@@ -206,8 +206,10 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 200px;
         padding-bottom: 200px;
+		padding-left: 100px;
+		padding-right: 100px;
     }
 
     header .intro-text .intro-lead-in {
@@ -226,6 +228,7 @@ header .intro-text .intro-heading {
         font-weight: 700;
         line-height: 75px;
     }
+
 }
 
 #portfolio .portfolio-item {
