--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
   color: #333333;
 }
 .masonry-wrapper {
-  padding: 1.5em;
+  padding: 1.5rem;
   max-width: 1280px;
   margin-right: auto;
   margin-left: auto;
@@ -132,13 +132,13 @@ body {
     columns: 3;
   }
 }
+
 .masonry-item {
+  width: auto;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .5));
   transition: filter .25s ease-in-out;
 }
-.masonry-item:hover {
-  filter: drop-shadow(0px 5px 5px rgba(100, 0, 0, .2));
-}
+
 .masonry-content {
   overflow: hidden;
 }
@@ -156,7 +156,7 @@ body {
   text-align: center;
 }
 .masonry-description {
-  padding: 2rem;
+  padding: 1rem;
   font-size: 1.5rem;
   border-top: 1px solid rgba(0, 0, 0, .05);
   text-align: center;
